samples/_failures_safe/1761638713_36e26a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_188300d9.c: In function ‘main’:
./samples/SAFE/__tmp_188300d9.c:169:5: error: expected expression at end of input
  169 |     add_edge(&graph, 4, 5,
      |     ^~~~~~~~
./samples/SAFE/__tmp_188300d9.c:169:5: error: expected declaration or statement at end of input
